--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name localhost;
 
     location / {
-        proxy_pass http://example.com/iptv/;  # <--- ЗАМЕНИ НА СВОЙ URL
+        proxy_pass $arg_url;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 
@@ -11,6 +11,6 @@ server {
         proxy_cache_valid 200 302 10m;
         proxy_cache_valid 404 1m;
         proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-        proxy_cache_key $scheme$proxy_host$request_uri$is_args$args;
+        add_header X-Cache-Status $upstream_cache_status;
     }
 }
