--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,6 @@
-worker_processes 1;
-
+worker_processes  auto;
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
@@ -11,7 +10,12 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    proxy_cache_path /var/cache/nginx/ip-tv-cache levels=1:2 keys_zone=iptv_cache:10m max_size=1g inactive=60m use_temp_path=off;
+    proxy_cache_path /var/cache/nginx/ip-tv-cache
+        levels=1:2
+        keys_zone=iptv_cache:100m
+        max_size=5g
+        inactive=1d
+        use_temp_path=off;
 
     include /etc/nginx/conf.d/*.conf;
 }
