--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -1,16 +1,26 @@
+proxy_cache_path /var/cache/nginx/ip-tv-cache
+    levels=1:2
+    keys_zone=iptv_cache:100m
+    max_size=5g
+    inactive=1d
+    use_temp_path=off;
+
 server {
     listen 80;
+    server_name _;
 
-    location / {
-        proxy_pass $arg_url;
-        proxy_http_version 1.1;
+    location /iptv/ {
+        proxy_pass http://real-iptv-source.com/;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
 
         proxy_cache iptv_cache;
-        proxy_cache_valid 200 302 10m;
+        proxy_cache_valid 200 302 30m;
         proxy_cache_valid 404 1m;
-        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        proxy_cache_use_stale error timeout updating invalid_header http_500 http_502 http_503 http_504;
+
         add_header X-Cache-Status $upstream_cache_status;
+
+        proxy_buffers 8 16k;
+        proxy_buffer_size 32k;
     }
 }
