--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -1,26 +1,23 @@
-proxy_cache_path /var/cache/nginx/ip-tv-cache
-    levels=1:2
-    keys_zone=iptv_cache:100m
-    max_size=5g
-    inactive=1d
-    use_temp_path=off;
+proxy_cache_path /var/cache/nginx/ip-tv-cache levels=1:2 keys_zone=iptv_cache:10m inactive=10m max_size=1g;
 
 server {
     listen 80;
-    server_name _;
+    server_name localhost;
+
+    access_log /var/log/nginx/access.log;
+    error_log  /var/log/nginx/error.log;
 
     location /iptv/ {
-        proxy_pass http://real-iptv-source.com/;
+        proxy_pass http://ledir.thund.re:80/;
         proxy_set_header Host $host;
-
         proxy_cache iptv_cache;
         proxy_cache_valid 200 302 30m;
-        proxy_cache_valid 404 1m;
-        proxy_cache_use_stale error timeout updating invalid_header http_500 http_502 http_503 http_504;
+        proxy_cache_use_stale error timeout updating;
+    }
 
-        add_header X-Cache-Status $upstream_cache_status;
-
-        proxy_buffers 8 16k;
-        proxy_buffer_size 32k;
+    # Чтобы не было 400 на /
+    location / {
+        return 200 'Nginx IPTV Proxy is running';
+        add_header Content-Type text/plain;
     }
 }
