--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -8,14 +8,17 @@ server {
     error_log  /var/log/nginx/error.log;
 
     location /iptv/ {
-        proxy_pass http://ledir.thund.re:80/;
-        proxy_set_header Host $host;
+        proxy_pass http://ledir.thund.re:80/;  # важно: заканчивается на /
+        proxy_set_header Host ledir.thund.re;
         proxy_cache iptv_cache;
         proxy_cache_valid 200 302 30m;
         proxy_cache_use_stale error timeout updating;
+
+        # отключаем сжатие и проверку MIME
+        proxy_set_header Accept-Encoding "";
+        proxy_set_header User-Agent $http_user_agent;
     }
 
-    # Чтобы не было 400 на /
     location / {
         return 200 'Nginx IPTV Proxy is running';
         add_header Content-Type text/plain;
