--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -1,26 +1,22 @@
-proxy_cache_path /var/cache/nginx/ip-tv-cache levels=1:2 keys_zone=iptv_cache:10m inactive=10m max_size=1g;
-
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     access_log /var/log/nginx/access.log;
-    error_log  /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log;
 
     location /iptv/ {
-        proxy_pass http://ledir.thund.re:80/;  # важно: заканчивается на /
+        proxy_pass http://ledir.thund.re/;  # Обязательно заканчивается на /
         proxy_set_header Host ledir.thund.re;
         proxy_cache iptv_cache;
         proxy_cache_valid 200 302 30m;
         proxy_cache_use_stale error timeout updating;
-
-        # отключаем сжатие и проверку MIME
         proxy_set_header Accept-Encoding "";
         proxy_set_header User-Agent $http_user_agent;
     }
 
     location / {
-        return 200 'Nginx IPTV Proxy is running';
+        return 200 'NGINX IPTV PROXY OK';
         add_header Content-Type text/plain;
     }
 }
