--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -6,7 +6,7 @@ server {
     error_log /var/log/nginx/error.log;
 
     location /iptv/ {
-        proxy_pass http://ledir.thund.re/;  # Обязательно заканчивается на /
+        proxy_pass http://ledir.thund.re/;
         proxy_set_header Host ledir.thund.re;
         proxy_cache iptv_cache;
         proxy_cache_valid 200 302 30m;
@@ -16,7 +16,7 @@ server {
     }
 
     location / {
-        return 200 'NGINX IPTV PROXY OK';
+        return 200 'NGINX IPTV PROXY OK\n';
         add_header Content-Type text/plain;
     }
 }
