--- a/conf/conf.d/iptv.conf
+++ b/conf/conf.d/iptv.conf
@@ -2,21 +2,17 @@ server {
     listen 80;
     server_name _;
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/iptv_access.log;
+    error_log /var/log/nginx/iptv_error.log;
 
     location /iptv/ {
-        proxy_pass http://ledir.thund.re/;
-        proxy_set_header Host ledir.thund.re;
+        proxy_pass http://ledir.thund.re:80/;  # Протокол и хост до play/
         proxy_cache iptv_cache;
-        proxy_cache_valid 200 302 30m;
-        proxy_cache_use_stale error timeout updating;
-        proxy_set_header Accept-Encoding "";
-        proxy_set_header User-Agent $http_user_agent;
-    }
-
-    location / {
-        return 200 'NGINX IPTV PROXY OK\n';
-        add_header Content-Type text/plain;
+        proxy_cache_valid 200 302 60m;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
