--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -2,8 +2,11 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
-        proxy_pass http://example.com/iptv/;  # <--- ЗАМЕНИ НА СВОЙ URL
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location /iptv/ {
+        proxy_pass http://ledir.thund.re/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 
